# rent-project

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  tox.ini
rent_app/: models.py  serializers.py  urls.py  views.py
rent_app/migrations/: 0001_initial.py  0002_alter_reservation_options.py
rental/: settings.py  urls.py  wsgi.py
test/: conftest.py  test_rent.py
